--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
               <li>Figma og Canva</li>
 
-              <li>HTML, CSS og Javascript</li>
+              <li>HTML, CSS, Javascript og Astro</li>
 
-              <li>UI/UX, Research</li>
+              <li>UI/UX og Research</li>
 
               <li>User testing, Prototyping og projektstyring</li>
             </ul>
@@ -184,7 +184,7 @@
                 <p class="kontakt_p">KONTAKTOPLYSNINGER <img class="diamant" src="billeder/diamant2.png" alt="diamant" /></p>
                 <p class="kontakt_p">e-mail: magnuslykke@gmail.com</p>
                 <p class="kontakt_p">tlf: +45 61 67 26 51</p>
-                <p class="kontakt_p">CVR: 41210206</p>
+                <p class="kontakt_p">CVR: 41 21 02 06</p>
               </div>
         </div>
         <div class="ikon_grid">
