--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="main_div">
         <section id="about_me">
           <div class="overskrift_div_about">
-            <h2 class="overskrift">About Me</h2>
+            <h2 class="overskrift">Om mig</h2>
             <!-- <div class="border_about"></div> -->
           </div>
           <div class="about_me_div">
